--- a/resources/java/environment/dev.application.properties
+++ b/resources/java/environment/dev.application.properties
@@ -3,8 +3,8 @@ environment=DEV
 log4j.properties=classpath:log4j-dev.properties
 
 activiti.jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
-activiti.jdbc.user=SYS AS SYSDBA
-activiti.jdbc.password=welcome1
+activiti.jdbc.user=ACTIVITI
+activiti.jdbc.password=ACTIVITI
 
 grcworkflow.jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
 grcworkflow.jdbc.user=GRC_WORKFLOW
