Update gitignore to ignore .bpmn

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ resources/java/environment/local.application.properties
 .classpath
 .settings/
 .loadpath
+.bpmn
 
 # External tool builders
 .externalToolBuilders/
