Integration with Safe (however blank page displays after redirect)

--- a/resources/java/environment/dev.application.properties
+++ b/resources/java/environment/dev.application.properties
@@ -9,3 +9,6 @@ activiti.jdbc.password=ACTIVITI
 grcworkflow.jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
 grcworkflow.jdbc.user=GRC_WORKFLOW
 grcworkflow.jdbc.password=GRC_WORKFLOW
+
+# Security Service URL
+securityService.url = http://qa.cpp.securityservice.int.westgroup.com/SecurityService
