--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -50,9 +50,19 @@
     <servlet-mapping>
         <servlet-name>GRC Web Application</servlet-name>
         <url-pattern>/resources/*</url-pattern>
+        <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
 
 
+    <!--Filter for routing through Safe-->
+    <filter>
+        <filter-name>appAuth</filter-name>
+        <filter-class>com.thomsonreuters.grc.web.SafeAuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>appAuth</filter-name>
+        <url-pattern>/app/*</url-pattern>
+    </filter-mapping>
 
 
     <!--Smoke Test -->
@@ -72,7 +82,7 @@
 
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>/app/index.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
