--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -82,7 +82,7 @@
 
 
 	<welcome-file-list>
-		<welcome-file>/app/index.html</welcome-file>
+		<welcome-file>app/index.jsp</welcome-file>
 	</welcome-file-list>
 
 </web-app>
