Add users and groups POC functionality
Also includes class refactoring to match strategy

--- a/resources/java/environment/dev.application.properties
+++ b/resources/java/environment/dev.application.properties
@@ -12,3 +12,4 @@ grcworkflow.jdbc.password=GRC_WORKFLOW
 
 # Security Service URL
 securityService.url = http://qa.cpp.securityservice.int.westgroup.com/SecurityService
+jetstream.security.url = http://uat.grc.coreworkbench.int.westgroup.com/grcnewsalerts/resources/security
