--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -50,7 +50,7 @@
     <servlet-mapping>
         <servlet-name>GRC Web Application</servlet-name>
         <url-pattern>/resources/*</url-pattern>
-        <url-pattern>/app/*</url-pattern>
+        <url-pattern>*</url-pattern>
     </servlet-mapping>
 
 
@@ -61,7 +61,7 @@
     </filter>
     <filter-mapping>
         <filter-name>appAuth</filter-name>
-        <url-pattern>/app/*</url-pattern>
+        <url-pattern>*</url-pattern>
     </filter-mapping>
 
 
@@ -82,7 +82,7 @@
 
 
 	<welcome-file-list>
-		<welcome-file>app/index.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
