--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
      "typeRoots": [ "./node_modules/@types" ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
