--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^6.0.45",
     "@types/jasmine": "^2.5.35",
     "angular2-template-loader": "^0.4.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "3.0.0-beta.9",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -42,10 +42,11 @@
     "karma-webpack": "^1.8.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "^4.0.11",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "tslint":  "^3.13.0",
+    "tslint":  "^4.0.2",
     "tslint-loader":"^3.2.1",
     "ts-loader":"^1.2.2",
     "typescript": "^2.0.3",
