--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
     "core-js": "^2.4.1",
-    "es6-shim":"https://github.com/paulmillr/es6-shim",
-    "reflect-metadata":"",
+    "es6-shim": "https://github.com/paulmillr/es6-shim",
+    "reflect-metadata": "",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "@types/node": "^6.0.45",
     "@types/jasmine": "^2.5.35",
+    "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "3.0.0-beta.9",
     "css-loader": "^0.23.1",
@@ -34,9 +34,10 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher":"^2.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
@@ -46,14 +47,13 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "tslint":  "^4.0.2",
-    "tslint-loader":"^3.2.1",
-    "ts-loader":"^1.2.2",
+    "ts-loader": "^1.2.2",
+    "tslint": "^4.0.2",
+    "tslint-loader": "^3.2.1",
     "typescript": "^2.0.3",
-    "typings":"^2.0.0",
+    "typings": "^2.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0"
-
   }
 }
